spacing issues

--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -6,3 +6,16 @@ select {
     background: url(../img/cogs.svg) right 20px center no-repeat;
 }
 
+.sv-products-menu {
+  z-index: 2000;
+}
+
+.sv-steps + .sv-blank-spacer {
+  margin-top: -60px;
+}
+
+@media only screen and (max-width: 767px) {
+  .sv-steps + .sv-blank-spacer {
+    margin-top: -30px;
+  }
+}
